--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ A Meet the requirements!
 Make the first test pass by adding a <header> </header>-->
 
 <!DOCTYPE html>
+<script src="script.js"></script>
 <html lang="en">
 <link rel="stylesheet" href="style.css">
    <head>
