--- a/index.html
+++ b/index.html
@@ -1,21 +1,7 @@
 
-<!-- =================
-  WRITE YOUR HTML HERE
-
-You only need to write the HTML that goes inside the <body> tag. To add things to the <head>, click the ⚙️ 
-   ===================
--->
-
-<!--- All the tests are red! You have to make them green. 
-
-Q How do you make the tests pass?
-A Meet the requirements!
-
-Make the first test pass by adding a <header> </header>-->
 
 <!DOCTYPE html>
 <html lang="en">
-  
 <link rel="stylesheet" href="style.css">
    <head>
       <title>Home</title>
@@ -37,9 +23,9 @@ Make the first test pass by adding a <header> </header>-->
       </div>
       <main>
          <br>
-         <div id=about>
+         <div id="about">
             <h2>About Me</h2>
-            <p>My name is Lungelo Tom and I am 21 years old. I reside in Khayelitsha township which is situated in Cape Town. I am a recent graduate at the University of the Western Cape in Bellville with a bachelor's degree in Computer Science. I started programming in 2016 when I was in 10th grade using Delphi. We also had a robotics class where we used NXT and lego componets to complete practiclas. From those moments became more interested in the tech field and my information technology teacher showed us all the amazing jobs in the tech field.
+            <p>My name is Lungelo Tom and I am 21 years old. I reside in Khayelitsha township which is situated in Cape Town. I am a recent graduate at the University of the Western Cape in Bellville with a bachelors degree in Computer Science. I started programming in 2016 when I was in 10th grade using Delphi. We also had a robotics class where we used NXT and lego componets to complete practiclas. From those moments became more interested in the tech field and my information technology teacher showed us all the amazing jobs in the tech field.
                <br>   
                One of my personal traits is that I never give up, even when I fail I get upchange my startegy and try again. <br>Here is a video that gets me out of bed every day:
             </p>
@@ -83,51 +69,18 @@ Make the first test pass by adding a <header> </header>-->
            <br>
            <br>
            <label id="comment-label" >Comment</label>
-           <textarea id="comment" placeholder="Write your comment here ..."></textarea>
+           <textarea placeholder="Write your comment here ..."></textarea>
          </div>
          <br>
-         <button id="button" type="button">Send</button>
+         <button type="button">Send</button>
       </main>
-     <script src="script.js"></script>
       <footer class="c-site-footer">
          <p>Copyright © 2022 All rights reserved - Lungelo Tom
          </p>
       </footer>
+      <script src="script.js" ></script>
    </body>
 </html>
 <!-- Your test console.
    Don't delete!-->
 <aside id="tests" aria-label="Test Readout." aria-live="polite" style="overflow:auto"></aside>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- Your test console.
-Don't delete!-->
-<aside id="tests" aria-label="Test Readout." aria-live="polite" style="overflow:auto">
-</aside>
