--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="style.css">
    <head>
       <title>Home</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -18,7 +16,6 @@
             <a href="#interests"> INTERESTS</a>
             <a href="#excitement"> EXCITEMENT IN TECH FIELD</a>
             <a href="#contact">CONTACT ME</a>
-            
          </nav>
       </div>
       <main>
@@ -43,36 +40,35 @@
             <h4>Excitement in tech field</h4>
             <p>What excites me the most about having a cereer in the tech field is the ability of having an impact in the Fourth Industrial Revolution and thought of how far can new technology be dveloped to solve the future's problems.  </p>
          </div>
-        <div>
-          <p id="skills">My Technical Skills</p>
-          <ul>
-            <li id="java">Java</li>
-            <li id="python">Python</li>
-            <li id="javascript">Javascript</li>
-        </ul>
-         <button id="favourite">Check my favourite programming language</button> 
-          
-        </div>
+         <div>
+            <p id="skills">My Technical Skills</p>
+            <ul>
+               <li id="java">Java</li>
+               <li id="python">Python</li>
+               <li id="javascript">Javascript</li>
+            </ul>
+            <button id="favourite">Check my favourite programming language</button> 
+         </div>
          <div id="contact">
             <h5>Contact me</h5>
             <img src="https://image.similarpng.com/very-thumbnail/2020/04/logo-WhatsApp-icon-modern-social-media-png.png" alt="WhatsApp-logo" width="70" height="75" />+27627653146
          </div>
          <br>
-        <div>
-          <h6> lungelotom0@gmail.com</h6>
-        </div>
+         <div>
+            <h6> lungelotom0@gmail.com</h6>
+         </div>
          <div class="group">
             <label id="name-label" >Name</label>
             <input type="text" placeholder="Enter Your Name" id="name">
             <label id="email-label" >Email</label>
             <input type="email" placeholder="Enter Your Email" id="email">
-           <br>
-           <br>
-           <label id="comment-label" >Comment</label>
-           <textarea placeholder="Write your comment here ..."></textarea>
+            <br>
+            <br>
+            <label id="comment-label" >Comment</label>
+            <textarea placeholder="Write your comment here ..."></textarea>
          </div>
          <br>
-         <button type="button">Send</button>
+         <button id="button" type="button">Send</button>
       </main>
       <footer class="c-site-footer">
          <p>Copyright © 2022 All rights reserved - Lungelo Tom
